--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     </div>
     <h2 style="text-align: center">FBI MOST WANTED CRIMINALS</h2>
     <div style="display: flex; justify-content: center">
-      <a href="create_new.html">Create New Wanted Poster</a>
+      <a href="posters\create_new.html">Create New Wanted Poster</a>
     </div>
     <br />
     <div style="display: flex; justify-content: center">
