--- a/posters/create_new.html
+++ b/posters/create_new.html
@@ -7,7 +7,7 @@
     <title>Document</title>
   </head>
   <body>
-    <a style="margin-left: 500px" href="index.html">Return To Homepage</a>
+    <a style="margin-left: 500px" href="../index.html">Return To Homepage</a>
     <div style="display: flex; justify-content: center">
       <form action="" style="width: 900px">
         <fieldset>
