--- a/admin/bart.html
+++ b/admin/bart.html
@@ -6,10 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
   </head>
-  <body style="height: 2000px">
-    <a href="../posters/index.html" style="margin-left: 650px"
-      >Back To Homepage</a
-    >
+  <body>
+    <a href="../index.html" style="margin-left: 650px">Back To Homepage</a>
     <div style="border: black solid 1px; width: 570px; margin-left: 650px">
       <img src="../images/wanted.png" alt="wanted" style="width: 570px" />
       <p style="margin-left: 10px; font-size: small">
